added endpoint and documentation
