# src/cmd/api/docs/swagger.json
@@ -86,9 +86,9 @@
                 }
             }
         },
-        "/api/v1/videos/{id}/status": {
+        "/api/v1/videos/{id}/info": {
             "get": {
-                "description": "Get video status",
+                "description": "Get video informations",
                 "consumes": [
                     "text/plain"
                 ],
@@ -96,9 +96,9 @@
                     "text/plain"
                 ],
                 "tags": [
-                    "status"
+                    "informations"
                 ],
-                "summary": "Get video status",
+                "summary": "Get video informations",
                 "parameters": [
                     {
                         "type": "string",
@@ -110,13 +110,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Video status",
+                        "description": "Video info",
                         "schema": {
                             "type": "Json"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "type": "object"
                         }
@@ -128,6 +134,11 @@
                         }
                     }
                 }
+            }
+        },
+        "/api/v1/videos/{id}/status": {
+            "get": {
+                "responses": {}
             }
         },
         "/api/v1/videos/{id}/streams/master.m3u8": {
